validate(venda): cliente já possui uma comanda aberta